# sim-debugger

./: AUDIT_PLAN.md  CHECKPOINT_0_AUDIT.md  CHECKPOINT_1_AUDIT.md  CLAUDE.md  CLAUDE_AI_PROJECT_BRIEF.md  CODEX_AUDIT_REPORT.md  FIXES_APPLIED.md  FIX_PROMPT.md  FULL_AUDIT_REPORT.md  PHYSICS_ADVERSARIAL_AUDIT.md  PHYSICS_AUDIT_REPORT.md  PLANNING.md  REALWORLD_TEST_REPORT.md  VERIFICATION_REPORT.md  pyproject.toml
docs/: .gitkeep
examples/boris_pusher/: __init__.py  boris_correct.py
examples/harmonic_oscillator/: __init__.py  euler_broken.py  leapfrog_correct.py
examples/racetrack_coil/: __init__.py
joss/: paper.bib  paper.md
src/sim_debugger/: __init__.py
src/sim_debugger/backends/: __init__.py  jax_backend.py  numpy_backend.py  scipy_backend.py
src/sim_debugger/cli/: __init__.py  main.py
src/sim_debugger/core/: __init__.py  auto_detect.py  config.py  history.py  invariants.py  monitor.py  plugins.py  state.py  violations.py
src/sim_debugger/dashboard/: __init__.py  app.py
src/sim_debugger/explain/: __init__.py  generator.py  templates.py
src/sim_debugger/instrument/: __init__.py  ast_rewriter.py  decorators.py  import_hook.py
src/sim_debugger/localise/: __init__.py  source.py  spatial.py  temporal.py
src/sim_debugger/parsec/: __init__.py  invariants.py
tests/: __init__.py  realworld_validation.py
tests/benchmarks/: __init__.py  simulations.py  test_benchmarks.py
tests/fixtures/: __init__.py
tests/integration/: __init__.py  test_end_to_end.py
tests/unit/: __init__.py  test_ast_rewriter.py  test_auto_detect.py  test_config.py  test_dashboard.py  test_explain.py  test_history.py  test_invariants.py  test_jax_backend.py  test_monitor.py  test_monitor_history.py  test_parsec_invariants.py  test_plugins.py  test_scipy_backend.py  test_source_localisation.py  test_spatial_localisation.py  test_state.py  test_temporal_localisation.py  test_violations.py
